--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,10 @@
 ---
 import Header from "@shared/Header.astro";
+
+// import Header from "@mws-astro/shared/svelte/header.svelte";
 import Footer from "@shared/Footer.astro";
 import Opengraph from "@shared/Opengraph.astro";
+// import { getTree } from "@mws-astro/navigation";
 // import { ViewTransitions } from "astro:transitions";
 // transition:animate="none"
 // transition:persist
@@ -16,72 +19,74 @@ import "@styles/styles.scss";
 import "@custom/custom.scss";
 
 export interface Props {
-    title?: string;
-    description?: string;
-    id?: string;
-    content_blocks?: Array<Record<string, any>>;
-    show_global_header?: boolean;
-    show_global_footer?: boolean;
-    currentPath?: string;
-    thumbnail?: any;
-    classes?: string[];
-    status?: any;
+  title?: string;
+  description?: string;
+  id?: string;
+  content_blocks?: Array<Record<string, any>>;
+  show_global_header?: boolean;
+  show_global_footer?: boolean;
+  currentPath?: string;
+  thumbnail?: any;
+  classes?: string[];
+  status?: any;
 }
 
 const {
-    title,
-    description,
-    show_global_header,
-    show_global_footer,
-    id,
-    currentPath,
-    thumbnail,
-    classes,
-    status = "online",
+  title,
+  description,
+  show_global_header,
+  show_global_footer,
+  id,
+  currentPath,
+  thumbnail,
+  classes,
+  status = "online",
 } = Astro.props;
 import preferences from "@data/preferences.json";
 
-const headerHeight = undefined; //preferences.header.height;
-const style: any = {};
 const pageWidth = preferences.page.maximum_page_width;
-
-
-pageWidth && (style["--page-max-width"] = pageWidth + "px");
-headerHeight && (style["--header-height"] = headerHeight + "px");
 ---
 
 <!doctype html>
-<html lang="en" class:list={classes} style={style}>
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width" />
-        <meta name="generator" content={Astro.generator} />
-        <meta name="revision" content={git.long("./")} />
-        <meta name="format-detection" content="telephone=no" />
-        {status !== "online" && <meta name="robots" content="noindex" />}
-        <link rel="sitemap" href="/sitemap-index.xml" />
+<html
+  lang="en"
+  class:list={classes}
+  style={{ ...(pageWidth && { "--page-max-width": `${pageWidth}px` }) }}
+>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,viewport-fit=cover"
+    />
+    <meta name="generator" content={Astro.generator} />
+    <meta name="revision" content={git.long("./")} />
+    <meta name="format-detection" content="telephone=no" />
+    {status !== "online" && <meta name="robots" content="noindex" />}
+    <link rel="sitemap" href="/sitemap-index.xml" />
 
-        <Opengraph {title} {description} {thumbnail} />
+    <Opengraph {title} {description} {thumbnail} />
 
-        <script>
-            window.addEventListener(
-                "scroll",
-                () => {
-                    if (document.documentElement.classList.contains("mobile-noscroll")) return;
-                    document.documentElement.classList.toggle(
-                        "scrolled",
-                        window.scrollY > 100,
-                    );
-                },
-                { passive: true },
-            );
-        </script>
-    </head>
-    <body>
-        {show_global_header && <Header {id} {currentPath} />}
-        <article>
-            <slot />
-            {show_global_footer && <Footer />}
-        </article>
-    </body>
+    <script>
+      window.addEventListener(
+        "scroll",
+        () => {
+          if (document.documentElement.classList.contains("mobile-noscroll"))
+            return;
+          document.documentElement.classList.toggle(
+            "scrolled",
+            window.scrollY > 100,
+          );
+        },
+        { passive: true },
+      );
+    </script>
+  </head>
+  <body>
+    {show_global_header && <Header />}
+    <article>
+      <slot />
+      {show_global_footer && <Footer />}
+    </article>
+  </body>
 </html>
